remove unused parts

--- a/index.html
+++ b/index.html
@@ -21,10 +21,7 @@
             <!-- Nav List -->
             <ul class="navbar">
                 <li><a href="#home" class="active">Home</a></li>
-                <li><a href="#cars">Cars</a></li>
-                <li><a href="#about">About</a></li>
                 <li><a href="#parts">Parts</a></li>
-                <li><a href="#blog">Our Blog</a></li>
             </ul>
             <!-- Search Icon -->
             <i class="bx bx-search" id="search-icon"></i>
@@ -39,63 +36,6 @@
         <div class="home-text">
             <h1>We Have Everything <br>Your <span>Car</span>Need</h1>
             <p>Lorem ipsum dolor sit amet consectetur, <br> adipisicing elit. Fuga, laboriosam.</p>
-            <!-- Home Button -->
-            <a href="#" class="btn">Discover Now</a>
-        </div>
-    </section>
-    <!-- Cars section -->
-    <section class="cars" id="cars">
-        <div class="heading">
-            <span>All Cars</span>
-            <h2>We have all types cars</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat, alias!</p>
-        </div>
-        <!-- Cars Container -->
-        <div class="cars-container container">
-            <!-- Box 1 -->
-            <div class="box">
-                <img src="img/cars/car1.jpg" alt="car">
-                <h2>BMW Car</h2>
-            </div>
-            <!-- Box 2 -->
-            <div class="box">
-                <img src="img/cars/car2.jpg" alt="car">
-                <h2>Mustang Car</h2>
-            </div>
-            <!-- Box 3 -->
-            <div class="box">
-                <img src="img/cars/car3.jpg" alt="car">
-                <h2>mercedes Car</h2>
-            </div>
-            <!-- Box 4 -->
-            <div class="box">
-                <img src="img/cars/car4.jpg" alt="car">
-                <h2>Dodge Car</h2>
-            </div>
-            <!-- Box 5 -->
-            <div class="box">
-                <img src="img/cars/car5.jpg" alt="car">
-                <h2>Porche Car</h2>
-            </div>
-            <!-- Box 6 -->
-            <div class="box">
-                <img src="img/cars/car6.jpg" alt="car">
-                <h2>Ferrari Car</h2>
-            </div>
-        </div>
-    </section>
-    <!-- About -->
-    <section class="about container" id="about">
-        <div class="about-img">
-            <img src="img/about.jpg" alt="about">
-        </div>
-        <div class="about-text">
-            <span>About Us</span>
-            <h2>Cheap Prices With <br>Quality Cars</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora quia fuga doloremque corporis ducimus.
-                Neque!</p>
-            <!-- About Button -->
-            <a href="#" class="btn">Learn More</a>
         </div>
     </section>
     <!-- Parts Section -->
@@ -112,89 +52,72 @@
                 <img src="img/parts/part1.jpg" alt="part">
                 <h3>Auto Spare Part</h3>
                 <span>$120.99</span>
-                <i class="bx bxs-star">(6 Reviews)</i>
-                <a href="#" class="btn">Buy Now</a>
-                <a href="#" class="details">Views Details</a>
             </div>
             <!-- Box 2 -->
             <div class="box">
                 <img src="img/parts/part2.jpg" alt="part">
                 <h3>Auto Spare Part</h3>
                 <span>$120.99</span>
-                <i class="bx bxs-star">(6 Reviews)</i>
-                <a href="#" class="btn">Buy Now</a>
-                <a href="#" class="details">Views Details</a>
             </div>
             <!-- Box 3 -->
             <div class="box">
                 <img src="img/parts/part3.jpg" alt="part">
                 <h3>Auto Spare Part</h3>
                 <span>$120.99</span>
-                <i class="bx bxs-star">(6 Reviews)</i>
-                <a href="#" class="btn">Buy Now</a>
-                <a href="#" class="details">Views Details</a>
             </div>
             <!-- Box 4 -->
             <div class="box">
                 <img src="img/parts/part4.jpg" alt="part">
                 <h3>Auto Spare Part</h3>
                 <span>$120.99</span>
-                <i class="bx bxs-star">(6 Reviews)</i>
-                <a href="#" class="btn">Buy Now</a>
-                <a href="#" class="details">Views Details</a>
             </div>
             <!-- Box 5 -->
             <div class="box">
                 <img src="img/parts/part5.jpg" alt="part">
                 <h3>Auto Spare Part</h3>
                 <span>$120.99</span>
-                <i class="bx bxs-star">(6 Reviews)</i>
-                <a href="#" class="btn">Buy Now</a>
-                <a href="#" class="details">Views Details</a>
             </div>
             <!-- Box 6 -->
             <div class="box">
                 <img src="img/parts/part6.jpg" alt="part">
                 <h3>Auto Spare Part</h3>
                 <span>$120.99</span>
-                <i class="bx bxs-star">(6 Reviews)</i>
-                <a href="#" class="btn">Buy Now</a>
-                <a href="#" class="details">Views Details</a>
             </div>
-        </div>
-    </section>
-    <!-- Blog Container -->
-    <section class="blog" id="blog">
-        <div class="heading">
-            <span>Blog & News</span>
-            <h2>Our Blog Content</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi, nemo!</p>
-        </div>
-        <!-- Blog Container -->
-        <div class="blog-container container">
-            <!-- Box 1 -->
+            <!-- Box 7 -->
             <div class="box">
-                <img src="img/cars/car3.jpg" alt="blog">
-                <span>Jul 12 2023</span>
-                <h3>How To Get Perfect Car At Low Price</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet, soluta?</p>
-                <a href="#" class="blog-btn">Read More<i class="bx bx-right-arrow-alt"></i></a>
+                <img src="img/parts/part7.jpg" alt="part">
+                <h3>Auto Spare Part</h3>
+                <span>$120.99</span>
             </div>
-            <!-- Box 2 -->
+            <!-- Box 8 -->
             <div class="box">
-                <img src="img/cars/car6.jpg" alt="blog">
-                <span>Jul 12 2023</span>
-                <h3>How To Get Perfect Car At Low Price</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet, soluta?</p>
-                <a href="#" class="blog-btn">Read More<i class="bx bx-right-arrow-alt"></i></a>
+                <img src="img/parts/part8.jpg" alt="part">
+                <h3>Auto Spare Part</h3>
+                <span>$120.99</span>
             </div>
-            <!-- Box 3 -->
+            <!-- Box 9 -->
             <div class="box">
-                <img src="img/cars/car2.jpg" alt="blog">
-                <span>Jul 12 2023</span>
-                <h3>How To Get Perfect Car At Low Price</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet, soluta?</p>
-                <a href="#" class="blog-btn">Read More<i class="bx bx-right-arrow-alt"></i></a>
+                <img src="img/parts/part9.jpg" alt="part">
+                <h3>Auto Spare Part</h3>
+                <span>$120.99</span>
+            </div>
+            <!-- Box 10 -->
+            <div class="box">
+                <img src="img/parts/part10.jpg" alt="part">
+                <h3>Auto Spare Part</h3>
+                <span>$120.99</span>
+            </div>
+            <!-- Box 11 -->
+            <div class="box">
+                <img src="img/parts/part11.jpg" alt="part">
+                <h3>Auto Spare Part</h3>
+                <span>$120.99</span>
+            </div>
+            <!-- Box 12 -->
+            <div class="box">
+                <img src="img/parts/part12.jpg" alt="part">
+                <h3>Auto Spare Part</h3>
+                <span>$120.99</span>
             </div>
         </div>
     </section>
@@ -204,30 +127,18 @@
             <div class="footer-box">
                 <a href="#" class="logo">Car<span>Point</span></a>
                 <div class="social">
-                    <a href="#"><i class="bx bxl-facebook"></i></a>
-                    <a href="#"><i class="bx bxl-twitter"></i></a>
-                    <a href="#"><i class="bx bxl-instagram"></i></a>
-                    <a href="#"><i class="bx bxl-youtube"></i></a>
+                    <a href="https://www.facebook.com/profile.php?id=100005313005446" target="_blank">
+                        <i class="bx bxl-facebook"></i>
+                    </a>
+                    <a href="https://www.instagram.com/gevorgyan9292/" target="_blank">
+                        <i class="bx bxl-instagram"></i>
+                    </a>
                 </div>
             </div>
             <div class="footer-box">
-                <h3>Page</h3>
-                <a href="#">Home</a>
-                <a href="#">Carts</a>
-                <a href="#">Parts</a>
-                <a href="#">Sales</a>
-            </div>
-            <div class="footer-box">
-                <h3>Legal</h3>
-                <a href="#">Privacy</a>
-                <a href="#">Refund Policy</a>
-                <a href="#">Cookie Policy</a>
-            </div>
-            <div class="footer-box">
                 <h3>Contact</h3>
-                <p>Armenia</p>
-                <p>Ubited State</p>
-                <p>Germany</p>
+                <a href="tel:+37441988205">+374 41988205</a>
+                <a href="mailto: abc@example.com">Send Email</a>
             </div>
         </div>
     </section>
