--- a/index.html
+++ b/index.html
@@ -4,20 +4,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Car parts</title>
+    <title>autowave</title>
     <link rel="stylesheet" href="style.css">
     <link href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css" rel="stylesheet">
 </head>
 
 <body>
-    <!-- Nacbar -->
+    <!-- Navbar -->
     <header>
         <!-- Nav Container -->
         <div class="nav container">
             <!-- Manu Icon -->
             <i class="bx bx-menu" id="menu-icon"></i>
             <!-- Logo -->
-            <a href="#" class="logo">Car<span>Point</span></a>
+            <a href="#" class="logo">Auto<span>Wave</span></a>
             <!-- Nav List -->
             <ul class="navbar">
                 <li><a href="#home" class="active">Home</a></li>
@@ -34,90 +34,77 @@
     <!-- Home -->
     <section class="home" id="home">
         <div class="home-text">
-            <h1>We Have Everything <br>Your <span>Car</span>Need</h1>
-            <p>Lorem ipsum dolor sit amet consectetur, <br> adipisicing elit. Fuga, laboriosam.</p>
+            <h1>Ամեն Ինչ <br>Ձեր <span>Մեքենայի</span> Համար</h1>
         </div>
     </section>
     <!-- Parts Section -->
     <section class="parts" id="parts">
         <div class="heading">
-            <span>What We Offer</span>
-            <h2>Our Car Is Always Exellent</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi, nemo!</p>
+            <span>Այն, ինչ առաջարկում ենք մեր սիրելի հաճախորդներին</span>
+            <h2>Մեր ավտոպահեստամասերը միշտ գերազանց վիճակում են</h2>
         </div>
         <!-- Parts Container -->
         <div class="parts-container container">
             <!-- Box 1 -->
             <div class="box">
                 <img src="img/parts/part1.jpg" alt="part">
-                <h3>Auto Spare Part</h3>
-                <span>$120.99</span>
+                <h3>Ավտոպահեստամաս</h3>
+                <!-- <span>Price</span> -->
             </div>
             <!-- Box 2 -->
             <div class="box">
                 <img src="img/parts/part2.jpg" alt="part">
-                <h3>Auto Spare Part</h3>
-                <span>$120.99</span>
+                <h3>Ավտոպահեստամաս</h3>
             </div>
             <!-- Box 3 -->
             <div class="box">
                 <img src="img/parts/part3.jpg" alt="part">
-                <h3>Auto Spare Part</h3>
-                <span>$120.99</span>
+                <h3>Ավտոպահեստամաս</h3>
             </div>
             <!-- Box 4 -->
             <div class="box">
                 <img src="img/parts/part4.jpg" alt="part">
-                <h3>Auto Spare Part</h3>
-                <span>$120.99</span>
+                <h3>Ավտոպահեստամաս</h3>
             </div>
             <!-- Box 5 -->
             <div class="box">
                 <img src="img/parts/part5.jpg" alt="part">
-                <h3>Auto Spare Part</h3>
-                <span>$120.99</span>
+                <h3>Ավտոպահեստամաս</h3>
             </div>
             <!-- Box 6 -->
             <div class="box">
                 <img src="img/parts/part6.jpg" alt="part">
-                <h3>Auto Spare Part</h3>
-                <span>$120.99</span>
+                <h3>Ավտոպահեստամաս</h3>
             </div>
             <!-- Box 7 -->
             <div class="box">
                 <img src="img/parts/part7.jpg" alt="part">
-                <h3>Auto Spare Part</h3>
-                <span>$120.99</span>
+                <h3>Ավտոպահեստամաս</h3>
             </div>
             <!-- Box 8 -->
             <div class="box">
                 <img src="img/parts/part8.jpg" alt="part">
-                <h3>Auto Spare Part</h3>
-                <span>$120.99</span>
+                <h3>Ավտոպահեստամաս</h3>
             </div>
             <!-- Box 9 -->
             <div class="box">
                 <img src="img/parts/part9.jpg" alt="part">
-                <h3>Auto Spare Part</h3>
-                <span>$120.99</span>
+                <h3>Ավտոպահեստամաս</h3>
             </div>
             <!-- Box 10 -->
             <div class="box">
                 <img src="img/parts/part10.jpg" alt="part">
-                <h3>Auto Spare Part</h3>
-                <span>$120.99</span>
+                <h3>Ավտոպահեստամաս</h3>
             </div>
             <!-- Box 11 -->
             <div class="box">
                 <img src="img/parts/part11.jpg" alt="part">
-                <h3>Auto Spare Part</h3>
-                <span>$120.99</span>
+                <h3>Ավտոպահեստամաս</h3>
             </div>
             <!-- Box 12 -->
             <div class="box">
                 <img src="img/parts/part12.jpg" alt="part">
-                <h3>Auto Spare Part</h3>
-                <span>$120.99</span>
+                <h3>Ավտոպահեստամաս</h3>
             </div>
         </div>
     </section>
@@ -125,26 +112,27 @@
     <section class="footer">
         <div class="footer-container container">
             <div class="footer-box">
-                <a href="#" class="logo">Car<span>Point</span></a>
-                <div class="social">
-                    <a href="https://www.facebook.com/profile.php?id=100005313005446" target="_blank">
+                <a href="#" class="logo">Auto<span>Wave</span></a>
+                <!-- <div class="social">
+                    <a href="" target="_blank">
                         <i class="bx bxl-facebook"></i>
                     </a>
-                    <a href="https://www.instagram.com/gevorgyan9292/" target="_blank">
+                    <a href="" target="_blank">
                         <i class="bx bxl-instagram"></i>
                     </a>
-                </div>
+                </div> -->
             </div>
             <div class="footer-box">
                 <h3>Contact</h3>
-                <a href="tel:+37441988205">+374 41988205</a>
-                <a href="mailto: abc@example.com">Send Email</a>
+                <a href="tel:+37441988205">Phone: +374 41988205</a>
+                <a href="tel:+37494442437">Phone: +374 94442437</a>
+                <a href="mailto: info@autowave.am">Email: info@autowave.am</a>
             </div>
         </div>
     </section>
     <!-- Copyright -->
     <div class="copyright">
-        <p>&#169; CarpoolVenom All Right Reserved</p>
+        <p>&#169; Autowave All Right Reserved</p>
     </div>
     <!-- Link To JS -->
     <script src="main.js"></script>
