--- a/index.html
+++ b/index.html
@@ -34,77 +34,77 @@
     <!-- Home -->
     <section class="home" id="home">
         <div class="home-text">
-            <h1>Ամեն Ինչ <br>Ձեր <span>Մեքենայի</span> Համար</h1>
+            <h1>We Have Everything <br>Your <span>Car </span>Need</h1>
         </div>
     </section>
     <!-- Parts Section -->
     <section class="parts" id="parts">
         <div class="heading">
-            <span>Այն, ինչ առաջարկում ենք մեր սիրելի հաճախորդներին</span>
-            <h2>Մեր ավտոպահեստամասերը միշտ գերազանց վիճակում են</h2>
+            <span>What We Offer</span>
+            <h2>Our auto parts are always in excellent condition</h2>
         </div>
         <!-- Parts Container -->
         <div class="parts-container container">
             <!-- Box 1 -->
             <div class="box">
                 <img src="img/parts/part1.jpg" alt="part">
-                <h3>Ավտոպահեստամաս</h3>
+                <h3>Auto Spare Part</h3>
                 <!-- <span>Price</span> -->
             </div>
             <!-- Box 2 -->
             <div class="box">
                 <img src="img/parts/part2.jpg" alt="part">
-                <h3>Ավտոպահեստամաս</h3>
+                <h3>Auto Spare Part</h3>
             </div>
             <!-- Box 3 -->
             <div class="box">
                 <img src="img/parts/part3.jpg" alt="part">
-                <h3>Ավտոպահեստամաս</h3>
+                <h3>Auto Spare Part</h3>
             </div>
             <!-- Box 4 -->
             <div class="box">
                 <img src="img/parts/part4.jpg" alt="part">
-                <h3>Ավտոպահեստամաս</h3>
+                <h3>Auto Spare Part</h3>
             </div>
             <!-- Box 5 -->
             <div class="box">
                 <img src="img/parts/part5.jpg" alt="part">
-                <h3>Ավտոպահեստամաս</h3>
+                <h3>Auto Spare Part</h3>
             </div>
             <!-- Box 6 -->
             <div class="box">
                 <img src="img/parts/part6.jpg" alt="part">
-                <h3>Ավտոպահեստամաս</h3>
+                <h3>Auto Spare Part</h3>
             </div>
             <!-- Box 7 -->
             <div class="box">
                 <img src="img/parts/part7.jpg" alt="part">
-                <h3>Ավտոպահեստամաս</h3>
+                <h3>Auto Spare Part</h3>
             </div>
             <!-- Box 8 -->
             <div class="box">
                 <img src="img/parts/part8.jpg" alt="part">
-                <h3>Ավտոպահեստամաս</h3>
+                <h3>Auto Spare Part</h3>
             </div>
             <!-- Box 9 -->
             <div class="box">
                 <img src="img/parts/part9.jpg" alt="part">
-                <h3>Ավտոպահեստամաս</h3>
+                <h3>Auto Spare Part</h3>
             </div>
             <!-- Box 10 -->
             <div class="box">
                 <img src="img/parts/part10.jpg" alt="part">
-                <h3>Ավտոպահեստամաս</h3>
+                <h3>Auto Spare Part</h3>
             </div>
             <!-- Box 11 -->
             <div class="box">
                 <img src="img/parts/part11.jpg" alt="part">
-                <h3>Ավտոպահեստամաս</h3>
+                <h3>Auto Spare Part</h3>
             </div>
             <!-- Box 12 -->
             <div class="box">
                 <img src="img/parts/part12.jpg" alt="part">
-                <h3>Ավտոպահեստամաս</h3>
+                <h3>Auto Spare Part</h3>
             </div>
         </div>
     </section>
